--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.main_div
+{
+  background: yellow;
+  width:100%;
+  height:100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.center_div
+{
+  width:20%;
+  height: 50vh;
+  background-color: #f4f4f4;
+  box-shadow: 5px 5px 25px -5px rgb(0,0,0,0.5);
+  border-radius: 15px;
+  
+}
+.heading_div
+{
+  color: white;
+  height:8vh;
+  margin-top: 30%;
+  background: transparent;
+  background-color: darkblue;
+  padding: 6px 0px 2px 0px;
+  margin-bottom: 10px;
+  box-shadow: 5px 5px 15px -5px rgb(0,0,0,0.3);
+  font-size: 50px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+button
+{
+  color: #f4f4f4;
+  background-color: darkblue;
+  border:none;
+  border-radius: 5%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 26px;
+  font-weight:1000;
+  height:40px;
+  width:90px;
+  margin:10% ;
+}
+button:hover
+{
+  background-color: blue;
+}
+@media (max-width:768px)
+{
+  .center_div
+  {
+    width:55%;
+  }
+  button
+  {
+    margin-left:5px;
+    min-height: 40px;
+    width:40px;
+    color: #f4f4f4;
+    font-size: 30px;
+  }
 }
